--- a/css/mobile.css
+++ b/css/mobile.css
@@ -213,7 +213,7 @@
     flex-direction: column;
   }
   .navbar4 a{
-    display: inline-block;
+    display: block;
     font-size: 15px;
     width: 100vw;
     color:white;
@@ -228,7 +228,8 @@
    }
   
    #rooms .room-container .room-card{
-    height:400px;
+    height:450px;
+   
     padding: 3px;
     background-color:rgb(245, 245, 245);
     border: rgb(190, 164, 164) 2px solid;
@@ -263,14 +264,14 @@
     color:rgb(190, 164, 164) ;
     text-align: center;
     margin: auto;
-    padding-top: 380px;
+    padding-top: 410px;
   
    }
   
    .button{
     color: white;
     background: #dc143c;
-    padding: 15px 20px;
+    padding: 10px 30px;
     margin-left: 73px;
     border-radius: 4px;
     font-size: 14px;
