--- a/css/mobile.css
+++ b/css/mobile.css
@@ -117,6 +117,10 @@
     background: rgb(243, 235, 239);
     }
 
+    #about-footer .about-footer p{
+      overflow: hidden;
+    }
+
     #contacts .contacts{
       display: grid;
       grid-template-columns: repeat(2,1fr);
